--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   color: grey;
 }
 
-.checked {
-  background-color: gray;
+/* .checked {
+  background-color:rgb(128, 128, 128);
+} */
+
+.completed {
+  text-decoration: line-through solid rgb(0, 0, 0);
 }
