--- a/style.css
+++ b/style.css
@@ -13,3 +13,30 @@
 .completed {
   text-decoration: line-through solid rgb(0, 0, 0);
 }
+
+.btn {
+  padding: 10px;
+  border: 0;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+#criar-tarefa {
+  background-color: lightgreen;
+  color: black;
+}
+
+#criar-tarefa:hover {
+  background-color: green;
+  color: white;
+}
+
+#apaga-tudo {
+  background-color: lightcoral;
+  color: black;
+}
+
+#apaga-tudo:hover {
+  background-color: red;
+  color: white;
+}
